corrected errors w/ menu icon not showing on some pages
This was due to the fact that this command:

    <meta name="viewport" content="width=device-width,initial-scale=1.0">

was not present in the html of some pages, causing mobile viewing to differ from desktop viewing (the menu icon wasn't showing up). I also made the icon smaller for mobile users.

--- a/about.css
+++ b/about.css
@@ -276,3 +276,21 @@
             pointer-events: auto;
         }
     }
+    /* Decrease size of logo to properly fit menu icon during mobile viewing */
+    @media (max-width: 500px) {
+        .logop1{
+            font-size: 17px;
+        }
+        span {
+            font-size: 17px;
+        }
+        .icon {
+            width: 30px;
+            height: 23px;
+        }
+        .menu {
+            width: 35px;
+            height: 25px;
+            margin-right: 30px;
+        }
+    }
