--- a/style.css
+++ b/style.css
@@ -711,6 +711,7 @@ h5 {
     font-size: 23px;
 } 
 }
+/* Decrease size of logo to properly fit menu icon during mobile viewing */
 @media (max-width: 500px) {
     .logop1{
         font-size: 17px;
@@ -721,6 +722,11 @@ h5 {
     .icon {
         width: 30px;
         height: 23px;
+    }
+    .menu {
+        width: 35px;
+        height: 25px;
+        margin-right: 30px;
     }
     .price-container {
         height: 1500px;
